--- a/templates/lights.html
+++ b/templates/lights.html
@@ -20,7 +20,7 @@
 	urls['set_program_speed'] = '{% url 'set_program_speed' %}';
 	urls['set_fixed_color'] = '{% url 'set_fixed_color' %}';
 </script>
-<script src="{% static "js/lights.js" %}"></script>
+<script type="module" src="{% static "js/lights.js" %}"></script>
 {% endblock %}
 
 {% block content %}
