--- a/templates/network_info.html
+++ b/templates/network_info.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block scripts %}
-<script src="{% static "js/network_info.js" %}"></script>
+<script type="module" src="{% static "js/network_info.js" %}"></script>
 {% endblock %}
 
 {% block content %}
