moved frontend stuff into its folder

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 			{% block js %}
 			{% endblock %}
 		</script>
-		<script src="{% static "bundle.js" %}"></script>
+		<script src="{% static "bundle.min.js" %}"></script>
 
 		<title>Raveberry</title>
 		<link id="favicon" rel="shortcut icon" type="image/png" href=""/>
