load dark favicon by default

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 		<script src="{% static "bundle.js" %}"></script>
 
 		<title>Raveberry</title>
-		<link id="favicon" rel="shortcut icon" type="image/png" href=""/>
+		<link id="favicon" rel="shortcut icon" type="image/png" href="{% static "graphics/raveberry_dark.png" %}"/>
 	</head>
 	<body>
 		<div id="disconnected-banner" class="information-banner">
